--- a/themes/hyde-hyde/assets/scss/hyde-hyde/_sidebar.scss
+++ b/themes/hyde-hyde/assets/scss/hyde-hyde/_sidebar.scss
@@ -39,7 +39,7 @@
   }
 }
 .site__title {
-  font-size: $site__title-font-size;
+  font-size: 1.5rem;
   margin-bottom: 0.5rem;
   a:hover {
     border: none;
